<resources>
    <string name="app_name">Superb</string>
    <string name="BtnClose">Close</string>
    <string name="BtnStart">Start</string>
    <string name="mensagem">Mensagem</string>
    <string name="e_mail">E-mail</string>
    <string name="create">Create</string>
    <!-- Preference Titles -->
    <string name="messages_header">About</string>
    <string name="appearence">Appearence</string>

    <!-- Credits Preferences -->
    <string name="signature_title">Developer</string>
    <string name="developer_name">Diogo Simões</string>

    <!-- Dark Mode Preferences -->
    <string name="dark_mode">Dark Mode</string>
    <string name="app_version">1.0.0</string>

</resources>