<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/appearence">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode"
            />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/developer_name"/>

        <EditTextPreference
            app:key="version"
            app:title="Version"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/app_version"
            />

    </PreferenceCategory>

</PreferenceScreen>